--- a/view/common/block-layout/resource-text-video-16_9.phtml
+++ b/view/common/block-layout/resource-text-video-16_9.phtml
@@ -27,7 +27,7 @@ $lang = $filterLocale ? $this->lang() : null;
     <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
-    <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file xlarge-8 flex-container flex-dir-column align-center">
+    <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file xlarge-8 flex-container flex-dir-column align-center padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
         <div class="attachments responsive-embed aspect16_9 radius">
             <?php
             foreach ($attachments as $attachment):
