--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -1,5 +1,5 @@
 <div class="<?php echo $this->alignmentClass . ' ' . $this->thumbnailType; ?> file">
-    <div class="attachments">
+    <div class="attachments max-image-height">
 <?php foreach($this->attachments as $attachment): ?>
     <div class="item resource max-image-height">
     <?php
