--- a/view/common/block-layout/resource-text-image-cover-portrait.phtml
+++ b/view/common/block-layout/resource-text-image-cover-portrait.phtml
@@ -27,8 +27,8 @@ $lang = $filterLocale ? $this->lang() : null;
         <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-6 flex-container">
-    <div class="attachments">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-6 flex-container padding-horizontal-1">
+    <div class="attachments max-image-height">
             <?php
             foreach ($attachments as $attachment):
                 $render = null;
