--- a/view/common/block-layout/resource-text-openseadragon.phtml
+++ b/view/common/block-layout/resource-text-openseadragon.phtml
@@ -30,7 +30,7 @@ $lang = $filterLocale ? $this->lang() : null;
        " " .
        $thumbnailType .
        " captions-" .
-       $captionPosition ?> media file large-7 xlarge-8">
+       $captionPosition ?> media file large-7 xlarge-8 padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
       <div class="attachments resource-text-openseadragon">
          <?php foreach ($attachments as $attachment):
 
