--- a/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
@@ -96,9 +96,6 @@ endforeach; ?>
         </div>
         <div class="text">
             <?= $html ?>
-            <div class="learn-more">
-                <h3 class="h4"><?php echo $item->link('Learn more about this item'); ?></h3>
-            </div>
             <?php
             $identifier = $item->value("dcterms:identifier");
             if ($identifier): ?>
@@ -106,5 +103,8 @@ endforeach; ?>
             <?php endif;
             ?>
         </div>
+        <button class="button medium warning learn-more">
+            <h3 class="h5"><?php echo $item->link('Learn more about this item'); ?></h3>
+        </button>
     </div>
 </div>
