--- a/view/common/block-layout/resource-text-container.phtml
+++ b/view/common/block-layout/resource-text-container.phtml
@@ -87,9 +87,6 @@ $lang = $filterLocale ? $this->lang() : null;
       </div>
       <div class="text">
             <?= $html ?>
-            <div class="learn-more">
-                <h3 class="h4"><?php echo $item->link('Learn more about this item'); ?></h3>
-            </div>
             <?php
             $identifier = $item->value("dcterms:identifier");
             if ($identifier): ?>
@@ -97,5 +94,8 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endif;
             ?>
         </div>
+        <button class="button medium warning learn-more">
+            <h3 class="h5"><?php echo $item->link('Learn more about this item'); ?></h3>
+        </button>
     </div>
 </div>
