--- a/view/common/block-layout/resource-text-video-16_9.phtml
+++ b/view/common/block-layout/resource-text-video-16_9.phtml
@@ -109,5 +109,8 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endif;
             ?>
         </div>
+        <button class="button medium warning learn-more">
+            <h3 class="h5"><?php echo $item->link('Learn more about this item'); ?></h3>
+        </button>
     </div>
 </div>
