--- a/view/common/site-page-pagination.phtml
+++ b/view/common/site-page-pagination.phtml
@@ -4,8 +4,10 @@ $prevText = $translate('Previous');
 $nextText = $translate('Next');
 ?>
 <?php if ($prevPage || $nextPage): ?>
-<div class="site-page-pagination">
-    <?php echo $prevPage ? $this->hyperlink($prevText, $prevPage->siteUrl()) : ''; ?>
-    <?php echo $nextPage ? $this->hyperlink($nextText, $nextPage->siteUrl()) : ''; ?>
+<div class="grid-container">
+    <div class="site-page-pagination">
+        <?php echo $prevPage ? $this->hyperlink($prevText, $prevPage->siteUrl()) : ''; ?>
+        <?php echo $nextPage ? $this->hyperlink($nextText, $nextPage->siteUrl()) : ''; ?>
+    </div>
 </div>
 <?php endif; ?>
