Updated resource with text blocks

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -558,6 +558,9 @@ nav.breadcrumbs {
   h3 small {
       color: $white;
   }
+  button.warning a {
+    color: $black;
+  }
 }
 
 /*Foundation S Prototype*/ 
