--- a/view/common/block-layout/resource-text-image-cover-dark.phtml
+++ b/view/common/block-layout/resource-text-image-cover-dark.phtml
@@ -27,7 +27,7 @@ $lang = $filterLocale ? $this->lang() : null;
         <h3 class="h2 padding-vertical-1"><?= $escape($heading) ?></h3>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-7 medium-padding-horizontal-1">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-7">
         <div class="attachments max-image-height">
         <?php
             foreach ($attachments as $attachment):
