--- a/view/common/block-layout/resource-text-openseadragon-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-dark.phtml
@@ -39,14 +39,10 @@ $lang = $filterLocale ? $this->lang() : null;
                     $media = $attachment->media() ? : $item->primaryMedia();
                     $mediaRenderer = $media->renderer();
                     $mediaType = $media->mediaType();
-                    if ($media && $mediaRenderer === 'iiif') :
-                        echo $this->thumbnail($media, $this->thumbnailType);
-                    elseif ($media && $mediaType === 'image/jpeg') :
-                        echo $this->thumbnail($media, $this->thumbnailType);
-                    elseif ($media) :
-                        echo $media->render(['thumbnailType' => $thumbnailType,'link' => $link,]);
-                    endif;
-                
+                   echo $media->render([
+                   'thumbnailType' => $thumbnailType,
+                   'link' => $link,
+                    ]);
 
                     if ($showTitleOption == 'item_title'):
                         $title = $item->displayTitle(null, $lang);
