--- a/view/common/block-layout/item-showcase-block-align-middle-full-width.phtml
+++ b/view/common/block-layout/item-showcase-block-align-middle-full-width.phtml
@@ -38,5 +38,8 @@
                 <div class="caption padding-1 grid-container text-left"><?php echo $caption; ?></div>
             <?php endif; ?>
         </div>
+        <button class="button medium warning learn-more">
+            <h3 class="h5"><?php echo $item->link('Learn more about this item'); ?></h3>
+        </button>
     <?php endforeach; ?>
 </div>
