--- a/view/common/block-layout/item-showcase-block-full-width-metadata.phtml
+++ b/view/common/block-layout/item-showcase-block-full-width-metadata.phtml
@@ -59,7 +59,9 @@
                 <h3 class="grid-container h4 identifier text-left"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
                 <?php endif; ?>
             </div>
-
+            <button class="button medium warning learn-more">
+            <h3 class="h5"><?php echo $item->link('Learn more about this item'); ?></h3>
+            </button>
         </div>
     <?php endforeach; ?>
 </div>
