Revised Item Show link code

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -425,6 +425,7 @@ nav.breadcrumbs {
 .item-showcase-cover-centre {
   display: grid;
   align-items: center;
+  justify-items: center;
 }
 
 .item-showcase-cover-centre img {
