--- a/view/common/block-layout/item-showcase-block-metadata.phtml
+++ b/view/common/block-layout/item-showcase-block-metadata.phtml
@@ -58,9 +58,9 @@
                 <h3 class="grid-container h4 identifier text-left"><small><?php echo 'Ref. ' . $identifier; ?></small></h3>
                 <?php endif; ?>
             </div>
-            <button class="button medium warning learn-more">
-                <h3 class="h5"><?php echo $item->link('Learn more about this item'); ?></h3>
-            </button>
+            <div class="learn-more">
+                <h3 class="button medium warning"><?php echo $item->link("Learn more about this item"); ?></h3>
+            </div>
         </div>
     <?php endforeach; ?>
 </div>
