--- a/view/common/block-layout/item-showcase-openseadragon-dark.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-dark.phtml
@@ -40,9 +40,9 @@
                     ?>
                     <div class="caption padding-1 grid-container text-left"><?php echo $caption; ?></div>
                 <?php endif; ?>
-                <button class="button medium warning learn-more">
-                    <h3 class="h5"><?php echo $item->link('Learn more about this item'); ?></h3>
-                </button>
+                <div class="learn-more">
+                    <h3 class="button medium warning"><?php echo $item->link("Learn more about this item"); ?></h3>
+                </div>
             </div>
         <?php endforeach; ?>
     </div>
