--- a/view/common/block-layout/item-showcase.phtml
+++ b/view/common/block-layout/item-showcase.phtml
@@ -1,40 +1,37 @@
 <div class="grix-x grid-container">
-    <?php if (!empty($heading)): ?>
-        <div class="media-text-heading">
-            <h3 class="h2 padding-vertical-1"><?= $heading ?></h3>
-        </div>
-    <?php endif; ?>
+	<?php if (!empty($heading)): ?>
+	<div class="media-text-heading">
+		<h3 class="h2 padding-vertical-1"><?= $heading ?></h3>
+	</div>
+	<?php endif; ?>
 </div>
-<div class="item-showcase grid-x grid-margin-x grid-margin-y">
-<?php foreach ($attachments as $attachment): ?>
-    <div class="class=item resource cell small-12 medium-6">
-    <?php
-    $item = $attachment->item();
-    if ($item):
-    ?>
-        <?php
-        $media = $attachment->media() ?: $item->primaryMedia();
-        if ($media):
-            echo $this->thumbnail($media, $this->thumbnailType);
-        endif;
-        ?>
-            <?php $showTitleOption = $this->showTitleOption; ?>
-            <?php if ($showTitleOption == 'item_title'): ?>
-            <h3"><?php echo $item->link($item->displayTitle()); ?></h3>
-            <?php elseif ($showTitleOption == 'file_name'): ?>
-            <h3><?php echo $media->displayTitle(); ?></h3>
-            <?php endif; ?>
-        <?php endif; ?>
+<div class="item-showcase grid-x grid-margin-x grid-margin-y flex-dir-column">
+	<?php foreach ($attachments as $attachment): ?>
+	<div class="class=item resource cell small-12 medium-6">
+		<?php
+  $item = $attachment->item();
+  if ($item): ?>
+		<?php
+  $media = $attachment->media() ?: $item->primaryMedia();
+  if ($media):
+      echo $this->thumbnail($media, $this->thumbnailType);
+  endif;
+  ?>
+		<?php $showTitleOption = $this->showTitleOption; ?>
+		<?php if ($showTitleOption == "item_title"): ?>
+		<h3"><?php echo $item->link($item->displayTitle()); ?></h3>
+			<?php elseif ($showTitleOption == "file_name"): ?>
+			<h3><?php echo $media->displayTitle(); ?></h3>
+			<?php endif; ?>
+			<?php endif;
+  ?>
 
-        <?php
-        $caption = $attachment->caption();
-        if ($caption):
-        ?>
-            <div class="caption"><?php echo $caption; ?></div>
-        <?php endif; ?>
-        <button class="button medium warning learn-more">
-            <h3 class="h5"><?php echo $item->link('Learn more about this item'); ?></h3>
-        </button>
-    </div>
-<?php endforeach; ?>
+			<?php
+   $caption = $attachment->caption();
+   if ($caption): ?>
+			<div class="caption"><?php echo $caption; ?></div>
+			<?php endif;
+   ?>
+	</div>
+	<?php endforeach; ?>
 </div>
