--- a/view/common/block-layout/resource-text-metadata-full-width-dark.phtml
+++ b/view/common/block-layout/resource-text-metadata-full-width-dark.phtml
@@ -106,8 +106,8 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endif;
             ?>
         </div>
-        <button class="button medium warning learn-more">
-            <h3 class="h5"><?php echo $item->link('Learn more about this item'); ?></h3>
-        </button>
+        <div class="learn-more">
+            <h3 class="button medium warning"><?php echo $item->link("Learn more about this item"); ?></h3>
+        </div>
     </div>
 </div>
