--- a/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
@@ -103,8 +103,8 @@ endforeach; ?>
             <?php endif;
             ?>
         </div>
-        <button class="button medium warning learn-more">
-            <h3 class="h5"><?php echo $item->link('Learn more about this item'); ?></h3>
-        </button>
+        <div class="learn-more">
+            <h3 class="button medium warning"><?php echo $item->link("Learn more about this item"); ?></h3>
+        </div>
     </div>
 </div>
