--- a/view/common/block-layout/resource-text-openseadragon-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-dark.phtml
@@ -71,7 +71,7 @@ $lang = $filterLocale ? $this->lang() : null;
          endforeach; ?>
       </div>
    </div>
-    <div class="resource-text max-block-height large-5 xlarge-4 flex-container flex-dir-column align-center padding-1 large-padding-2 xlarge-padding-3">
+    <div class="resource-text max-block-height large-5 xlarge-4 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
         <div class="metadata margin-bottom-1 separator-center">
             <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == "item_title"): ?>
