--- a/view/common/block-layout/resource-text-sensitive-content.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content.phtml
@@ -85,7 +85,7 @@ endforeach; ?>
             </div>
         </button>
     </div>
-    <div class="resource-text large-5 flex-container flex-dir-column align-center padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
+    <div class="resource-text large-5 flex-container flex-dir-column align-center align-middle padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
         <div class="metadata margin-bottom-1 separator-center">
             <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == "item_title"): ?>
