Increased button size

--- a/view/common/block-layout/resource-text-container.phtml
+++ b/view/common/block-layout/resource-text-container.phtml
@@ -95,7 +95,7 @@ $lang = $filterLocale ? $this->lang() : null;
             ?>
         </div>
         <div class="learn-more">
-            <h3 class="button medium warning"><?php echo $item->link("Learn more about this item"); ?></h3>
+            <h3 class="button large warning"><?php echo $item->link("Learn more about this item"); ?></h3>
         </div>
     </div>
 </div>
