--- a/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
@@ -104,7 +104,7 @@ endforeach; ?>
             ?>
         </div>
         <div class="learn-more">
-            <h3 class="button medium warning"><?php echo $item->link("Learn more about this item"); ?></h3>
+            <h3 class="button large warning"><?php echo $item->link("Learn more about this item"); ?></h3>
         </div>
     </div>
 </div>
