Fixed button text on dark backgrounds

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -564,7 +564,7 @@ nav.breadcrumbs {
   h3 small {
       color: $white;
   }
-  button.warning a {
+  .learn-more h3.button a {
     color: $black;
   }
 }
