Added margin to sensitive content message

--- a/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
@@ -29,7 +29,7 @@ endif; ?>
     <div class="large-7 flex-container align-center">
         <button id="unblur-image" type="button" data-toggle="blur-image-<?=$uniqueId
 ?>" class="flex-container flex-dir-column align-spaced align-middle">
-            <div class="sensitive-content padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3 flex-container flex-dir-column">
+            <div class="sensitive-content margin-horizontal-1 padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3 flex-container flex-dir-column">
                 <i class="far fa-eye-slash fa-lg"></i>
                 <h3 class="h4 warning-text margin-top-1 xlarge-margin-top-2">This item contains sensitive content which people may find offensive. Click or press to view.</h3>
             </div>
