--- a/view/common/block-layout/item-showcase-block-full-width-metadata.phtml
+++ b/view/common/block-layout/item-showcase-block-full-width-metadata.phtml
@@ -60,7 +60,7 @@
                 <?php endif; ?>
             </div>
             <div class="learn-more">
-                <h3 class="button medium warning"><?php echo $item->link("Learn more about this item"); ?></h3>
+                <h3 class="hollow button medium warning"><?php echo $item->link("Learn more about this item"); ?></h3>
             </div>
         </div>
     <?php endforeach; ?>
