--- a/view/common/block-layout/item-showcase-multiples.phtml
+++ b/view/common/block-layout/item-showcase-multiples.phtml
@@ -39,6 +39,9 @@
                 ?>
                 <div class="caption padding-1 xlarge-padding-2 xlarge-padding-horizontal-3 flex-child-grow"><?php echo $caption; ?></div>
             <?php endif; ?>
+            <div class="learn-more">
+                <h3 class="hollow button medium warning"><?php echo $item->link("Learn more about this item"); ?></h3>
+            </div>
         </div>
     <?php endforeach; ?>
 </div>
