--- a/view/common/block-layout/item-showcase-openseadragon-full-width-dark.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-full-width-dark.phtml
@@ -40,7 +40,7 @@
                     <div class="caption padding-1 grid-container text-left"><?php echo $caption; ?></div>
                 <?php endif; ?>
                 <div class="learn-more">
-                    <h3 class="button medium warning"><?php echo $item->link("Learn more about this item"); ?></h3>
+                    <h3 class="hollow button medium warning"><?php echo $item->link("Learn more about this item"); ?></h3>
                 </div>
             </div>
         <?php endforeach; ?>
