--- a/view/common/block-layout/item-showcase-openseadragon.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon.phtml
@@ -39,7 +39,7 @@
                 <div class="caption padding-1 grid-container text-left"><?php echo $caption; ?></div>
             <?php endif; ?>
             <div class="learn-more">
-                <h3 class="button large warning"><?php echo $item->link("Learn more about this item"); ?></h3>
+                <h3 class="hollow button large warning"><?php echo $item->link("Learn more about this item"); ?></h3>
             </div>
         </div>
     <?php endforeach; ?>
