--- a/view/common/block-layout/item-showcase.phtml
+++ b/view/common/block-layout/item-showcase.phtml
@@ -32,6 +32,9 @@
 			<div class="caption"><?php echo $caption; ?></div>
 			<?php endif;
    ?>
+		<div class="learn-more">
+			<h3 class="hollow button medium warning"><?php echo $item->link("Learn more about this item"); ?></h3>
+		</div>
 	</div>
 	<?php endforeach; ?>
 </div>
