Removed link from item titles - Item Showcase

--- a/view/common/block-layout/item-showcase-openseadragon.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon.phtml
@@ -24,7 +24,7 @@
                     <?php $showTitleOption = $this->showTitleOption; ?>
                     <?php if ($showTitleOption == 'item_title'): ?>
                         <div class="separator-center metadata">
-                            <h3 class="margin-top-1"><?php echo $item->link($item->displayTitle()); ?></h3>
+                            <h3 class="margin-top-1"><?php echo $item->displayTitle(); ?></h3>
                         </div>
                     <?php elseif ($showTitleOption == 'file_name'): ?>
                         <div class="separator-center metadata">
