--- a/view/common/block-layout/legacy-blocks/item-showcase-fixed-img-height.phtml
+++ b/view/common/block-layout/legacy-blocks/item-showcase-fixed-img-height.phtml
@@ -16,7 +16,7 @@
             <div class="metadata margin-bottom-1">
             <?php $showTitleOption = $this->showTitleOption; ?>
             <?php if ($showTitleOption == 'item_title'): ?>
-            <h3><?php echo $item->link($item->displayTitle()); ?></h3>
+            <h3><?php echo $item->displayTitle(); ?></h3>
             <?php elseif ($showTitleOption == 'file_name'): ?>
             <h3><?php echo $media->displayTitle(); ?></h3>
             <?php endif; ?>
