--- a/view/common/block-layout/legacy-blocks/item-showcase-full-width-img-cover.phtml
+++ b/view/common/block-layout/legacy-blocks/item-showcase-full-width-img-cover.phtml
@@ -20,7 +20,7 @@
                 <div class="separator-center">
                     <?php $showTitleOption = $this->showTitleOption; ?>
                     <?php if ($showTitleOption == 'item_title'): ?>
-                        <h3 class="margin-top-1"><?php echo $item->link($item->displayTitle()); ?></h3>
+                        <h3 class="margin-top-1"><?php echo $item->displayTitle(); ?></h3>
                     <?php elseif ($showTitleOption == 'file_name'): ?>
                         <h3 class="margin-top-1"><?php echo $media->displayTitle(); ?></h3>
                     <?php endif; ?>
