--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -14,9 +14,9 @@ $thumbnail-shadow-hover: 0 0 6px 1px rgba($primary-color, 0.5);
 @import 'foundation-core';
 @import 'omeka';
 
-h1.site-title {
+p.site-title {
   margin-bottom: 0;
-  font-size: $global-font-size;
+  font-size: 1.1 * $global-font-size;
   margin-right: 1.5 * $global-margin;
   font-weight: 600;
   color: $white;
@@ -27,6 +27,7 @@ h1.site-title {
   }
   @include breakpoint(large) {
     max-width: unset;
+    font-size: 1.3 * $global-font-size;
   }
 }
 
@@ -110,11 +111,16 @@ header .top-bar-right {
 .university-logo {
   margin: rem-calc(12);
   display: flex;
+  flex-grow: 1;
   @include breakpoint(355) {
       margin: rem-calc(12) rem-calc(24);
   }
   @include breakpoint(400) {
     flex-grow: 1;
+  }
+  @include breakpoint(medium) {
+    flex-grow: 0;
+    flex-shrink: 1;
   }
 }
 
@@ -1243,7 +1249,10 @@ nav.top-bar-left {
 
 .search-bar-mobile button.search-icon[aria-expanded=true] {
   background: $primary-color;
-  margin: 0 $global-margin;
+  margin: 0;
+    @include breakpoint(medium) {
+    margin: 0 $global-margin;
+    }
   }
   
 #show-search-menu input[type=text]:not(:only-child) {
