--- a/view/common/block-layout/asset-hero-medium.phtml
+++ b/view/common/block-layout/asset-hero-medium.phtml
@@ -44,8 +44,12 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
         <?php endif; ?>
     </div>
     <?php if ($attachment['caption'] !== ''): ?>
-        <h2 class="h5 caption padding-horizontal-1 medium-large-padding-horizontal-2 large-padding-horizontal-3">
-            <?= empty($attachment['raw']) ? $attachment['caption'] : $escape($attachment['caption']) ?>
-        </h2>
+        <div class="hero-title-caption">
+            <div class="grid-container">
+                <p class="caption padding-horizontal-1">
+                    <?= empty($attachment['raw']) ? $attachment['caption'] : $escape($attachment['caption']) ?>
+                </p>
+            </div>
+        </div>
     <?php endif; ?>
 </div>
