--- a/view/common/block-layout/asset-hero-title-bottom-letterbox.phtml
+++ b/view/common/block-layout/asset-hero-title-bottom-letterbox.phtml
@@ -46,11 +46,11 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
         <?php endif; ?>
     </div>
     <?php if ($attachment['caption'] !== ''): ?>
-        <div class="hero-title-caption hero-image-fixed">
+        <div class="hero-title-caption">
             <div class="grid-container">
-                <h2 class="h5 caption padding-horizontal-1">
+                <p class="caption padding-horizontal-1">
                     <?= empty($attachment['raw']) ? $attachment['caption'] : $escape($attachment['caption']) ?>
-                </h2>
+                </p>
             </div>
         </div>
     <?php endif; ?>
