--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -639,16 +639,16 @@ nav.breadcrumbs {
     padding: 1rem 2.5rem;
   }
 
-  .hero-image .hero-title-bottom h2 {
+  .hero-image .hero-title-bottom h1 {
     width: 100%;
     margin-bottom: 0;
   }
 
-  .hero-title-bottom h2 {
+  .hero-title-bottom h1 {
     margin-bottom: 0;
     background-color: transparent;
     line-height: 1.2;
-    padding: $global-padding;
+    padding: 0 * $global-padding;
     font-weight: 300;
     @include breakpoint(medium) {
       line-height: 1.4;
@@ -1607,6 +1607,9 @@ margin-top: 0.5 * $global-margin;
 .colour-scheme-4 {
   /*background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 50%, rgba(0,0,0,0.3) 100%);*/ 
   background-color: $uom-footer;
+  & h1 {
+    color: $white;
+}
   & h2 {
       color: $white;
   }
