--- a/view/common/block-layout/resource-text-container-metadata.phtml
+++ b/view/common/block-layout/resource-text-container-metadata.phtml
@@ -23,7 +23,7 @@ $lang = $filterLocale ? $this->lang() : null;
 
 <div class="block media-text grid-x grid-padding-x align-spaced">
     <?php if (!empty($heading)): ?>
-    <div class="media-text-heading margin-bottom-1">
+    <div class="media-text-heading medium-offset-1 large-offset-2 margin-bottom-1">
         <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
