--- a/view/common/block-layout/item-showcase-block-align-middle-full-width.phtml
+++ b/view/common/block-layout/item-showcase-block-align-middle-full-width.phtml
@@ -1,6 +1,6 @@
 <div class="grix-x grid-container">
     <?php if (!empty($heading)): ?>
-        <div class="media-text-heading">
+        <div class="media-text-heading medium-offset-1 large-offset-2">
             <h3 class="h2 padding-vertical-1"><?= $heading ?></h3>
         </div>
     <?php endif; ?>
