--- a/view/common/block-layout/item-showcase.phtml
+++ b/view/common/block-layout/item-showcase.phtml
@@ -1,6 +1,6 @@
 <div class="grix-x grid-container">
 	<?php if (!empty($heading)): ?>
-	<div class="media-text-heading">
+	<div class="media-text-heading medium-offset-1 large-offset-2">
 		<h2 class="h2 padding-vertical-1"><?= $heading ?></h2>
 	</div>
 	<?php endif; ?>
