--- a/view/common/block-layout/resource-text-openseadragon.phtml
+++ b/view/common/block-layout/resource-text-openseadragon.phtml
@@ -22,7 +22,7 @@ $lang = $filterLocale ? $this->lang() : null;
 ?>
 <div class="block media-text full-width-css grid-x grid-padding-x padding-1 large-padding-2 margin-bottom-1">
    <?php if (!empty($heading)): ?>
-   <div class="media-text-heading margin-bottom-1">
+   <div class="media-text-heading medium-offset-1 large-offset-2 margin-bottom-1">
       <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
    </div>
    <?php endif; ?>
