--- a/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
+++ b/view/common/block-layout/resource-text-sensitive-content-full-width.phtml
@@ -21,7 +21,7 @@ $lang = $filterLocale ? $this->lang() : null; ?>
 
 <div class="sensitive-material full-width-css block media-text grid-x grid-padding-x align-spaced">
     <?php if (!empty($heading)): ?>
-    <div class="media-text-heading">
+    <div class="media-text-heading medium-offset-1 large-offset-2">
         <h2 class="h2 padding-vertical-1 margin-bottom-1"><?=$escape($heading) ?></h2>
     </div>
     <?php
