--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -52,9 +52,11 @@ foreach ($itemMedia as $media) {
     <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
     <?php if ($useMiradorViewer): ?>
         <?php echo $this->mirador($item); ?> 
-    <?php elseif ($useUniversalViewer): ?>    
+    <?php endif; ?>
+    <?php if ($useUniversalViewer): ?>    
         <?php echo $this->universalViewer($item); ?>
-    <?php elseif ($useMediaRender): ?>    
+    <?php endif; ?>
+    <?php if ($useMediaRender): ?>    
         <?php echo $media->render(); ?> 
     <?php endif; ?>
     </div>
