Revised captions on Asset blocks

--- a/view/common/block-layout/asset-hero-title-bottom-letterbox.phtml
+++ b/view/common/block-layout/asset-hero-title-bottom-letterbox.phtml
@@ -47,10 +47,8 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
     </div>
     <?php if ($attachment['caption'] !== ''): ?>
         <div class="hero-title-caption">
-            <div class="grid-container">
-                <p class="caption padding-horizontal-1">
-                    <?= empty($attachment['raw']) ? $attachment['caption'] : $escape($attachment['caption']) ?>
-                </p>
+            <div class="grid-container caption padding-horizontal-1">
+                <?= empty($attachment['raw']) ? $attachment['caption'] : $escape($attachment['caption']) ?>
             </div>
         </div>
     <?php endif; ?>
