--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -668,9 +668,11 @@ nav.breadcrumbs {
     margin-bottom: 0;
   }
 
-  caption p {
+  .caption p {
       background: #f7f7f7;
-      font-size: 1.2 * $global-font-size;
+      font-size: $global-font-size;
+      margin: 0.5 * $global-margin 0;
+      color: lighten($black, 20%);
   }
   
   /*Hero image sizes*/
