Replaced buttons with hollow

--- a/view/common/block-layout/resource-text-openseadragon-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-dark.phtml
@@ -102,7 +102,7 @@ $lang = $filterLocale ? $this->lang() : null;
             ?>
         </div>
         <div class="learn-more">
-            <h2 class="button large warning"><?php echo $item->link("Learn more about this item"); ?></h2>
+            <h2 class="hollow button large warning"><?php echo $item->link("Learn more about this item"); ?></h2>
         </div>
     </div>
 </div>
