--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -34,7 +34,7 @@
             <div class="caption padding-1"><?php echo $caption; ?></div>
         <?php endif; ?>
         <div class="learn-more">
-            <h2 class="hollow button medium warning"><?php echo $item->link("Learn more about this item"); ?></h2>
+            <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
         </div>
     </div>
 <?php endforeach; ?>
