--- a/view/common/block-layout/item-showcase-block-full-width-metadata.phtml
+++ b/view/common/block-layout/item-showcase-block-full-width-metadata.phtml
@@ -60,7 +60,7 @@
                 <?php endif; ?>
             </div>
             <div class="learn-more">
-                <h2 class="hollow button medium warning"><?php echo $item->link("Learn more about this item"); ?></h2>
+                <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
             </div>
         </div>
     <?php endforeach; ?>
