--- a/view/common/block-layout/item-showcase-multiples-full-width.phtml
+++ b/view/common/block-layout/item-showcase-multiples-full-width.phtml
@@ -37,10 +37,10 @@
             $caption = $attachment->caption();
             if ($caption):
                 ?>
-                <div class="caption padding-1 xlarge-padding-2 xlarge-padding-horizontal-3 flex-child-grow"><?php echo $caption; ?></div>
+                <div class="caption padding-1 xlarge-padding-horizontal-3 flex-child-grow"><?php echo $caption; ?></div>
             <?php endif; ?>
             <div class="learn-more">
-                <h2 class="hollow button medium warning"><?php echo $item->link("Learn more about this item"); ?></h2>
+                <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
             </div>
         </div>
     <?php endforeach; ?>
