Removed hollow buttons from Resource with Text

--- a/view/common/block-layout/item-showcase-openseadragon.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon.phtml
@@ -39,7 +39,7 @@
                 <div class="caption padding-1 grid-container text-left"><?php echo $caption; ?></div>
             <?php endif; ?>
             <div class="learn-more">
-                <h2 class="hollow button large warning"><?php echo $item->link("View full item"); ?></h2>
+                <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
             </div>
         </div>
     <?php endforeach; ?>
