--- a/view/common/block-layout/resource-text-container.phtml
+++ b/view/common/block-layout/resource-text-container.phtml
@@ -95,7 +95,7 @@ $lang = $filterLocale ? $this->lang() : null;
             ?>
         </div>
         <div class="learn-more">
-            <h2 class="hollow button large warning"><?php echo $item->link("View full item"); ?></h2>
+            <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
         </div>
     </div>
 </div>
