Removed text-left from caption - Item Showcase blocks

--- a/view/common/block-layout/item-showcase-block-full-width-metadata.phtml
+++ b/view/common/block-layout/item-showcase-block-full-width-metadata.phtml
@@ -56,7 +56,7 @@
                 $identifier = $item->value('dcterms:identifier');
                 if ($identifier):
                 ?>
-                <h2 class="grid-container h4 identifier text-left"><small><?php echo 'Ref. ' . $identifier; ?></small></h2>
+                <h2 class="grid-container h4 identifier"><small><?php echo 'Ref. ' . $identifier; ?></small></h2>
                 <?php endif; ?>
             </div>
             <div class="learn-more">
