--- a/view/common/block-layout/item-showcase-block-cover-full-width.phtml
+++ b/view/common/block-layout/item-showcase-block-cover-full-width.phtml
@@ -35,7 +35,7 @@
             $caption = $attachment->caption();
             if ($caption):
                 ?>
-                <div class="caption padding-1 grid-container text-left"><?php echo $caption; ?></div>
+                <div class="caption padding-1 grid-container"><?php echo $caption; ?></div>
             <?php endif; ?>
             <div class="learn-more">
                 <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
