--- a/view/common/block-layout/item-showcase-openseadragon-dark.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-dark.phtml
@@ -38,7 +38,7 @@
                 $caption = $attachment->caption();
                 if ($caption):
                     ?>
-                    <div class="caption padding-1 grid-container text-left"><?php echo $caption; ?></div>
+                    <div class="caption padding-1 grid-container"><?php echo $caption; ?></div>
                 <?php endif; ?>
                 <div class="learn-more">
                     <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
