--- a/view/common/block-layout/item-showcase-openseadragon.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon.phtml
@@ -36,7 +36,7 @@
             $caption = $attachment->caption();
             if ($caption):
                 ?>
-                <div class="caption padding-1 grid-container text-left"><?php echo $caption; ?></div>
+                <div class="caption padding-1 grid-container"><?php echo $caption; ?></div>
             <?php endif; ?>
             <div class="learn-more">
                 <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
