--- a/view/common/block-layout/asset-hero-title-bottom-letterbox.phtml
+++ b/view/common/block-layout/asset-hero-title-bottom-letterbox.phtml
@@ -30,12 +30,12 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
 <?php if (empty($attachment['asset'])) return; ?>
 
 <div class="full-width-css gray-background region-splash">
-    <div class="hero-image hero-image-fixed image-large region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 1)),url(<?= $attachment['asset']->assetUrl() ?>);">
+    <div role="banner" class="hero-image hero-image-fixed image-large region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 1)),url(<?= $attachment['asset']->assetUrl() ?>);">
         <?php if (!empty($heading)) : ?>
             <div class="grid-x hero-title-bottom align-bottom">
                 <div class="hero-title">
                     <div class="grid-container">
-                        <h1><?= $heading ?></h1>
+                        <h1 aria-level="3"><?= $heading ?></h1>
                         <?php $attachmentUrl = $attachment['page'] ? $attachment['page']->siteUrl() : ($attachment['url'] ?? null); ?>
                         <?php if ($attachment['alt_link_title'] && $attachmentUrl) : ?>
                             <a href="<?= $escapeAttr($attachmentUrl) ?>"><button class="btn knowmore"><?= $escape($attachment['alt_link_title']) ?></button></a>
