Added role="banner" to hero

--- a/view/common/block-layout/asset-hero-small.phtml
+++ b/view/common/block-layout/asset-hero-small.phtml
@@ -30,7 +30,7 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
 <?php if (empty($attachment['asset'])) return; ?>
 
 <div class="full-width-css">
-    <div class="hero-image image-small region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 1)),url(<?= $attachment['asset']->assetUrl() ?>);">
+    <div role="banner" class="hero-image image-small region-splash flex-container <?= $escapeAttr($attachment['class']) ?>" style="background-image:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 1)),url(<?= $attachment['asset']->assetUrl() ?>);">
         <?php if (!empty($heading)) : ?>
             <div class="grid-container grid-x flex-grow align-middle">
                 <div class="hero-title">
