Refined loading of OpenSeaDragon

--- a/view/common/block-layout/resource-text-openseadragon-no-metadata-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-no-metadata-dark.phtml
@@ -10,6 +10,7 @@
  * @var string $showTitleOption "item_title" or "file_name" or "none".
  * @var string $captionPosition "center", "left" or "right".
  */
+$this->headScript()->prependFile($this->assetUrl('js/annona.js'));
 
 $escape = $this->plugin('escapeHtml');
 $hyperlink = $this->plugin('hyperlink');
