--- a/view/common/block-layout/item-showcase-openseadragon.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon.phtml
@@ -1,3 +1,7 @@
+<?php 
+$this->headScript()->prependFile($this->assetUrl('js/annona.js'));
+?>
+
 <div class="grix-x grid-container">
     <?php if (!empty($heading)): ?>
         <div class="media-text-heading medium-offset-1 large-offset-2">
