--- a/view/common/block-layout/resource-text-openseadragon-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-dark.phtml
@@ -11,12 +11,11 @@
  * @var string $captionPosition "center", "left" or "right".
  */
 
+$this->headScript()->prependFile($this->assetUrl('js/annona.js'));
 $escape = $this->plugin('escapeHtml');
 $hyperlink = $this->plugin('hyperlink');
 $siteSetting = $this->plugin('siteSetting');
-
 $linkType = $siteSetting('attachment_link_type', 'item');
-
 $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
