--- a/view/common/block-layout/resource-text-openseadragon-multiples-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-multiples-dark.phtml
@@ -11,6 +11,7 @@
  * @var string $captionPosition "center", "left" or "right".
  */
 
+$this->headScript()->prependFile($this->assetUrl('js/annona.js'));
 $escape = $this->plugin("escapeHtml");
 $hyperlink = $this->plugin("hyperlink");
 $siteSetting = $this->plugin("siteSetting");
