Only load Annona CSS for Openseadragon enabled pages

--- a/view/common/block-layout/resource-text-openseadragon-multiples-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-multiples-dark.phtml
@@ -12,6 +12,8 @@
  */
 
 $this->headScript()->prependFile($this->assetUrl('js/annona.js'));
+$this->headLink()->prependStylesheet($this->assetUrl('css/annona.css'));
+
 $escape = $this->plugin("escapeHtml");
 $hyperlink = $this->plugin("hyperlink");
 $siteSetting = $this->plugin("siteSetting");
