--- a/view/common/block-layout/resource-text-openseadragon-no-metadata-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-no-metadata-dark.phtml
@@ -11,6 +11,7 @@
  * @var string $captionPosition "center", "left" or "right".
  */
 $this->headScript()->prependFile($this->assetUrl('js/annona.js'));
+$this->headLink()->prependStylesheet($this->assetUrl('css/annona.css'));
 
 $escape = $this->plugin('escapeHtml');
 $hyperlink = $this->plugin('hyperlink');
