--- a/view/common/block-layout/item-showcase-openseadragon-dark.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-dark.phtml
@@ -1,4 +1,5 @@
-<?php 
+<?php
+$this->headLink()->prependStylesheet($this->assetUrl('css/annona.css')); 
 $this->headScript()->prependFile($this->assetUrl('js/annona.js'));
 ?>
 
