--- a/view/common/block-layout/item-showcase-openseadragon-full-width-dark.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-full-width-dark.phtml
@@ -1,6 +1,6 @@
 <?php 
-$this->headScript()->prependFile($this->assetUrl('js/annona.js'));
-$this->headLink()->prependStylesheet($this->assetUrl('css/annona.css'));
+$this->headScript()->appendFile($this->assetUrl('js/annona.js'));
+$this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
 ?>
 
 <div class="grix-x grid-container">
