--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -31,7 +31,7 @@ foreach ($itemMedia as $media) {
 
     if ($mediaRenderer == 'iiif' || $mediaRenderer == 'iiifPresentation' || $mediaType === 'image/jpeg') {
         $viewers[] = 'mirador';
-    } elseif ($mediaType == 'pdf') {
+    } elseif ($mediaType == 'application/pdf') {
         $viewers[] = 'universal';
     } elseif ($mediaRenderer == 'youtube') {
         $viewers[] = 'youtube';
@@ -41,36 +41,35 @@ foreach ($itemMedia as $media) {
 }
 ?>
 
-<div class="resource-title">
-    <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
-    <h2 class="label"><?php echo $translate('Item'); ?></h2>
-</div>
-
-<div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
-    <?php $this->trigger('view.show.before'); ?>
-
-    <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
-        <?php 
-        foreach ($viewers as $viewer) {
-            if ($viewer == 'mirador') {
-                echo $this->mirador($item);
-            } 
-            if ($viewer == 'universal') {    
-                echo $this->universalViewer($item); 
-            } 
-            if ($viewer == 'youtube') {
-                echo "<div class='responsive-embed widescreen'>";     
-                echo $media->render();
-                echo "</div>";
-            }
-            if ($viewer == 'default') {     
-                echo $media->render();  // Assuming you want to render the default media
-            }
-        }
-        ?>
+    <div class="resource-title">
+        <?php echo $this->pageTitle($item->displayTitle(null, $valueLang), 2); ?>
+        <h2 class="label"><?php echo $translate('Item'); ?></h2>
     </div>
-</div>
 
+    <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
+        <?php $this->trigger('view.show.before'); ?>
+
+        <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
+            <?php 
+            foreach ($viewers as $viewer) {
+                if ($viewer == 'mirador') {
+                    echo $this->mirador($item);
+                } 
+                if ($viewer == 'universal') {    
+                    echo $this->universalViewer($item); 
+                } 
+                if ($viewer == 'youtube') {
+                    echo "<div class='responsive-embed widescreen'>";     
+                    echo $media->render();
+                    echo "</div>";
+                }
+                if ($viewer == 'default') {     
+                    echo $media->render();  // Assuming you want to render the default media
+                }
+            }
+            ?>
+        </div>
+    </div>
 
     <?php if ($fullWidthMainHasBlocks): ?>
     <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
